# metainfo

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
src/: backward.rs  convert.rs  faststr_map.rs  forward.rs  kv.rs  lib.rs  type_map.rs
